--- a/styles/archittects.css
+++ b/styles/archittects.css
@@ -32,9 +32,9 @@ header {
 
 }
 
-.nav ul li {
+.nav li {
     list-style: none;
-    margin-right: 25px;
+    margin-right: 45px;
 
 }
 
@@ -47,11 +47,11 @@ header {
     font-weight: 500;
 }
 
-.brand-moto {
+.brand-moto{
 
     display: flex;
     text-align: center;
-    width: 868px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
@@ -105,7 +105,7 @@ header {
     align-items: center;
     justify-content: center;
     gap: 70px;
-    margin-top: 85px;
+    margin: 85px 0;
 }
 
 .content-pic {
@@ -126,10 +126,117 @@ header {
     line-height: normal;
 }
 
-.text-primary{
+.text-primary {
     color: #FF900E;
 }
 
-.text-gray{
+.text-gray {
     color: #727272;
+}
+
+.text-content {
+    max-width: 500px;
+    padding-left: 240px;
+}
+
+.achivement-title {
+    color: var(--dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.achievement-description, .heading-description, .footer-description {
+    color: var(--dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 20px;
+}
+
+.achievement-items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    margin-top: 100px;
+}
+
+.item {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    width: 241.831px;
+    height: 241.831px;
+    border: 1px solid #FF900E;
+    
+}
+
+.item-pic {
+    /* width: 45px; */
+}
+
+.item-amnt,
+.item-title {
+    margin-top: 10px;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.item-title {
+    font-size: 20px;
+    color: #727272;
+}
+
+.sponsors {
+    margin: 150px 0;
+
+}
+
+
+.sponsors-heading{
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.heading-title{
+    color: var(--dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.sponsors-company{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    gap:150px;
+}
+
+.footer{
+    margin-bottom: 100px;
+}
+
+.footer-content{
+    background: #FFF4E7;
+    max-width: 1440px;
+    text-align: center;
+    padding: 40px 0;
+    margin: 0 auto;
 }
